[gd_scene load_steps=15 format=3 uid="uid://b6fvp0wup6fkc"]

[ext_resource type="Script" path="res://Screens/Battle/RenderableUnit.gd" id="1_27qpu"]
[ext_resource type="Script" path="res://Screens/Battle/UnitInstance.gd" id="1_hndmv"]
[ext_resource type="Texture2D" uid="uid://cuaqb1irywx58" path="res://Screens/Battle/sprites/BaseSpriteTesterBackAttack.png" id="3_2u3yt"]
[ext_resource type="Resource" uid="uid://db07m7y1a3tmi" path="res://Screens/Battle/data/UnitType_Zahra.tres" id="3_slhy1"]
[ext_resource type="Texture2D" uid="uid://c8dlgbjvo7rjx" path="res://Screens/Battle/sprites/BaseSpriteTesterBackIdle.png" id="4_nmgx3"]
[ext_resource type="Texture2D" uid="uid://bxs83jfee0p2l" path="res://Screens/Battle/sprites/BaseSpriteTesterBackWalk.png" id="5_k4k64"]
[ext_resource type="Texture2D" uid="uid://b20yest7yawen" path="res://Screens/Battle/sprites/BaseSpriteTesterFrontAttack.png" id="6_8rbmm"]
[ext_resource type="Texture2D" uid="uid://bjbxk1841dsf8" path="res://Screens/Battle/sprites/BaseSpriteTesterFrontIdle.png" id="7_rr8yi"]
[ext_resource type="Texture2D" uid="uid://dautgftolmkg" path="res://Screens/Battle/sprites/BaseSpriteTesterFrontWalk.png" id="8_74ro1"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5tmtq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_2u3yt")
}],
"loop": true,
"name": &"BackAttack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_nmgx3")
}],
"loop": true,
"name": &"BackIdle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_k4k64")
}, {
"duration": 1.0,
"texture": ExtResource("4_nmgx3")
}],
"loop": true,
"name": &"BackWalk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_8rbmm")
}],
"loop": true,
"name": &"FrontAttack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_rr8yi")
}],
"loop": true,
"name": &"FrontIdle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_74ro1")
}, {
"duration": 1.0,
"texture": ExtResource("7_rr8yi")
}],
"loop": true,
"name": &"FrontWalk",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_cytam"]
font_size = 20
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_4d8wl"]
resource_name = "highlight"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1evga"]
resource_name = "highlight_red"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xege1"]
_data = {
"highlight": SubResource("Animation_4d8wl"),
"highlight_red": SubResource("Animation_1evga")
}

[node name="RenderableUnit" type="Node2D"]
script = ExtResource("1_27qpu")

[node name="Zahra" type="Node" parent="."]
script = ExtResource("1_hndmv")
unit_type = ExtResource("3_slhy1")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5tmtq")
animation = &"FrontIdle"
offset = Vector2(0, -64)
flip_h = true

[node name="HUD" type="Node2D" parent="."]
position = Vector2(0, -15)

[node name="StatusEffects" type="HBoxContainer" parent="HUD"]
custom_minimum_size = Vector2(112, 32)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -159.0
offset_right = 84.0
offset_bottom = -127.0
grow_horizontal = 2
grow_vertical = 2

[node name="rect" type="ColorRect" parent="HUD"]
offset_left = -57.0
offset_top = -189.0
offset_right = -47.0
offset_bottom = -179.0

[node name="maxhp_bar" type="ColorRect" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -171.0
offset_right = 59.0
offset_bottom = -164.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14902, 0.211765, 0.180392, 1)

[node name="hp_bar" type="ColorRect" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -172.0
offset_right = 58.0
offset_bottom = -165.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.384314, 0.819608, 0.470588, 1)

[node name="hp_label" type="Label" parent="HUD"]
offset_left = 14.0
offset_top = -181.0
offset_right = 54.0
offset_bottom = -150.0
text = "4/4"
label_settings = SubResource("LabelSettings_cytam")
horizontal_alignment = 2

[node name="name" type="Label" parent="HUD"]
offset_left = -43.0
offset_top = -196.0
offset_right = 4.0
offset_bottom = -170.0
text = "Zahra"
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xege1")
}

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -33.0
offset_top = -136.0
offset_right = 33.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="facing_changed" from="." to="." method="_on_facing_changed"]
[connection signal="gui_input" from="Control" to="." method="_on_control_gui_input"]
